--- a/PBL - Dieta/index.html
+++ b/PBL - Dieta/index.html
@@ -17,7 +17,7 @@
    			<form class="col s12 ">
      			 <div class="row">
        				 <div class="input-field col s6">
-          				<input  placeholder="Refeição" id="nomeProduto" type="text" class="validate">
+          				<input  placeholder="Refeição" id="nomeProduto" type="text" class="validate" required>
      
        				 </div>
         			<div class="col s6">
