--- a/teste.html
+++ b/teste.html
@@ -7,13 +7,25 @@
 	</head>
 	<body>
 		<main role ="main">
-			<input type="text" required="" name="nome" placeholder="Nome">
-			<input type="email" required="" name="email" placeholder="Email">
-			<input type="number" required="" name="idade" placeholder="Idade">
-			<input type="password" required="" name="senha" placeholder="Senha">
-			<input type="date" required="" name="data" placeholder="Data">
-
-			<button type="button">Go</button>
+			<header>
+				<h1>Cadastro</h1>
+			</header>
+			
+			<div id="principal">		
+				<input type="text" required="" name="nome" placeholder="Nome">
+				<br><br>
+				<input type="email" required="" name="email" placeholder="Email">
+				<br><br>
+				<input type="number" required="" name="idade" placeholder="Idade">
+				<br><br>
+				<input type="password" required="" name="senha" placeholder="Senha">
+				<br><br>
+				<input type="date" required="" name="data" placeholder="Data">
+				<br><br><br>
+				<button type="button">Go</button>
+			</div>
+			
 		</main>
+
 	</body>
 </html>
